<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">260947220766101</string>
    <string name="app_namespace">tripcord_jeremy</string>
    <string name="app_secret">9e610da99d9c520c206a90db1ad23f6f</string>

    <!--<string name="app_id">261156010745222</string>-->
    <!--<string name="app_namespace">tripcord_test</string>-->
    <!--<string name="app_secret">f6a39a85f96a575c2121e542d4dbb682</string>-->

    <string name="app_name">Tripcord</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="signup">Sign up</string>
    <string name="title_activity_record">Recording your journey</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="take_picture">Take a picture</string>
    <string name="back_key_pressed_during_recording">Hey~ Guy!\nTravel path is being recorded\nDo you wanna cancel this record??</string>
    <string name="yes">Yes</string>
    <string name="no">No -_-</string>
    <string name="not_yet">Not yet</string>
    <string name="ask_to_finish_journey">Do you wanna finish your journey?</string>
    <string name="ready">Ready</string>
    <string name="enjoy_your_journey">Enjoy your journey</string>
    <string name="title_history">History</string>
    <string name="title_notice">Notice</string>
    <string name="title_settings">Settings</string>
    <string name="title_about_us">About Us</string>
    <string name="title_activity_record_result">Result your journey</string>
    <string name="enter_trip_title">Insert this trip title</string>
    <string name="ask_feeling">How was your feeling?</string>
    <string name="ask_transportation">What did you take?</string>
    <string name="ask_weather">How was the weather?</string>
    <string name="enter_trip_description">Describe your journey</string>
    <string name="action_drop">Drop</string>
    <string name="action_done">Done</string>
    <string name="trip_detail_info_save_success">Your journey info have been saved</string>
    <string name="trip_detail_info_save_fail">Your journey didn\'t save successfully</string>
    <string name="title_activity_record_detail">Journey</string>
    <string name="action_edit">Edit</string>
    <string name="action_social">Share</string>
    <string name="ask_for_drop_journey">Are you sure ??</string>
    <string name="title_activity_image_gallery">ImageGalleryActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Gallery">Gallery</string>
    <string name="share">Share</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="sns">SNS</string>
    <string name="sharing_automatically">Sharing automatically</string>
    <string name="post_on_facebook_your_journey">Do you wanna post your journey on facebook wall</string>
    <string name="feel_fun">Fun</string>
    <string name="feel_happy">Happy</string>
    <string name="feel_soso">Soso</string>
    <string name="feel_unhappy">Unhappy</string>
    <string name="feel_hard">Hard</string>
    <string name="transport_walk">Walk</string>
    <string name="transport_car">Car</string>
    <string name="transport_bus">Bus</string>
    <string name="transport_train">Train</string>
    <string name="transport_flight">Flight</string>
    <string name="weather_sunny">Sunny</string>
    <string name="weather_little_bit_cloudy">Little bit cloudy</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_rainy">Rainy</string>
    <string name="weather_snow">Snow</string>
    <string name="label_from">From : </string>
    <string name="label_to">To : </string>
    <string name="label_feeling">Feeling : </string>
    <string name="label_transport">Transport : </string>
    <string name="label_weather">Weather : </string>
    <string name="label_time">Time : </string>
    <string name="label_distance">Distance : </string>
    <string name="label_photo">Photo : </string>

</resources>
